[tool.poetry]
name = "streamlit-dbt-module-analytics"
version = "0.1.0"
description = ""
authors = ["Stephen Bailey <stkbailey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.3"
networkx = "^2.6.2"
pandas = "^1.3.2"
seaborn = "^0.11.2"
streamlit = "^0.87.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
